--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NEXT_PUBLIC_TEMPLATE_CLIENT_ID=7976449a6362f89d61ead11d0753cfd8
 
-OPENAI_API_KEY=
+OPENAI_API_KEY=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
 ENGINE_URL=
 ENGINE_ACCESS_TOKEN=
